--- a/mainPulse/PulseUI/pjobwindow.ui
+++ b/mainPulse/PulseUI/pjobwindow.ui
@@ -79,20 +79,45 @@
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="spacing">
+           <number>6</number>
+          </property>
           <item>
            <widget class="QLabel" name="labRuleName">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>15</height>
+             </size>
+            </property>
             <property name="text">
              <string>选择一个规则</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="comboBox"/>
+           <widget class="QComboBox" name="comboBox">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="QDialogButtonBox" name="butBox">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>15</height>
+             </size>
+            </property>
             <property name="standardButtons">
              <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+            </property>
+            <property name="centerButtons">
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -191,7 +216,19 @@
        <property name="title">
         <string/>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0,0,0">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="1">
@@ -236,6 +273,12 @@
            <widget class="QDateTimeEdit" name="dateTimeEdit">
             <property name="enabled">
              <bool>true</bool>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>200</width>
+              <height>0</height>
+             </size>
             </property>
             <property name="wrapping">
              <bool>false</bool>
@@ -327,22 +370,47 @@
         </item>
         <item>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_8">
-            <property name="text">
-             <string>采样间隔</string>
+          <item row="5" column="0" colspan="2">
+           <widget class="QCommandLinkButton" name="btnRunNow_3">
+            <property name="toolTip">
+             <string>立即启动当前任务，并不会影响后台调度时间</string>
             </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QComboBox" name="combFlagCol">
-            <property name="editable">
+            <property name="text">
+             <string>绘制图像</string>
+            </property>
+            <property name="checkable">
              <bool>false</bool>
             </property>
+            <property name="autoDefault">
+             <bool>false</bool>
+            </property>
+            <property name="default">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>主键列</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0">
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
           <item row="3" column="1">
-           <widget class="QCheckBox" name="checkBox">
+           <widget class="QCheckBox" name="chkRate">
             <property name="enabled">
              <bool>true</bool>
             </property>
@@ -373,8 +441,11 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="combDataCol"/>
+          </item>
           <item row="2" column="1">
-           <widget class="QSpinBox" name="spinBox_2">
+           <widget class="QSpinBox" name="spinSampInterval">
             <property name="enabled">
              <bool>true</bool>
             </property>
@@ -423,47 +494,45 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_7">
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>主键列</string>
+             <string>采样间隔</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="QComboBox" name="combDataCol"/>
-          </item>
-          <item row="4" column="0" colspan="2">
-           <widget class="QCommandLinkButton" name="btnRunNow_3">
-            <property name="toolTip">
-             <string>立即启动当前任务，并不会影响后台调度时间</string>
-            </property>
-            <property name="text">
-             <string>绘制图像</string>
-            </property>
-            <property name="checkable">
+          <item row="1" column="1">
+           <widget class="QComboBox" name="combFlagCol">
+            <property name="editable">
              <bool>false</bool>
-            </property>
-            <property name="autoDefault">
-             <bool>false</bool>
-            </property>
-            <property name="default">
-             <bool>true</bool>
             </property>
            </widget>
           </item>
-          <item row="5" column="0">
-           <spacer name="verticalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
+          <item row="4" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>展示范围</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QSpinBox" name="spinRang">
+            <property name="suffix">
+             <string>秒</string>
             </property>
-           </spacer>
+            <property name="prefix">
+             <string>最近</string>
+            </property>
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>9999999</number>
+            </property>
+            <property name="value">
+             <number>100</number>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
