--- a/mainPulse/PulseUI/pcreateconnectdialog.ui
+++ b/mainPulse/PulseUI/pcreateconnectdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>410</width>
-    <height>282</height>
+    <width>616</width>
+    <height>305</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,7 +28,7 @@
      <item row="2" column="2">
       <widget class="QLineEdit" name="editConnectName">
        <property name="text">
-        <string>test3306</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -38,7 +38,7 @@
         <string/>
        </property>
        <property name="text">
-        <string>123456</string>
+        <string/>
        </property>
        <property name="echoMode">
         <enum>QLineEdit::PasswordEchoOnEdit</enum>
@@ -61,7 +61,7 @@
      <item row="0" column="0" rowspan="7">
       <widget class="QListWidget" name="listWidget">
        <property name="currentRow">
-        <number>0</number>
+        <number>-1</number>
        </property>
        <item>
         <property name="text">
@@ -73,7 +73,7 @@
      <item row="4" column="2">
       <widget class="QLineEdit" name="editUserName">
        <property name="text">
-        <string>test</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -108,7 +108,7 @@
      <item row="3" column="2">
       <widget class="QLineEdit" name="editDBName">
        <property name="text">
-        <string>mysql</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -125,7 +125,7 @@
      <item row="0" column="2">
       <widget class="QLineEdit" name="editHost">
        <property name="text">
-        <string>192.168.31.228</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -145,7 +145,10 @@
         <number>65535</number>
        </property>
        <property name="value">
-        <number>3306</number>
+        <number>0</number>
+       </property>
+       <property name="displayIntegerBase">
+        <number>10</number>
        </property>
       </widget>
      </item>
